# signalfx-dotnet-tracing

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  Datadog.Profiler.sln  Datadog.Trace.Minimal.sln  Datadog.Trace.Native.sln  Datadog.Trace.proj  Datadog.Trace.sln  Directory.Build.props  LICENSE  LICENSE-3rdparty.csv  Makefile  NOTICE  PProfExtendedPrototype.sln  PackageVersionsComprehensive.g.props  PackageVersionsGeneratorDefinitions.json  PackageVersionsLatestMinors.g.props  README.md  SignalFx.Instrumentation.snk  Splunk.SignalFx.DotNet.psm1  Test.Common.props  copyright.ps1  createLogPath.sh  defaults.env  devenv.bat  docker-compose.yml  global.json  install.ps1  install.psm1  integrations.json  signal_fuse_protocol_buffers.proto  win-aspnet-samples.cmd  win-aspnet-test.cmd  win-integration-tests.cmd  win-unit-tests.cmd
.azure-pipelines/: integration-tests.yml  mininal-pipeline.yml  packages.yml  setup_tracer.ps1  third-party-test-suites.yml  ultimate-pipeline.yml  unit-tests.yml
.azure-pipelines/steps/: install-dotnet-sdks.yml  install-dotnet.yml  run-in-docker.yml
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: artifacts.yml  ci.yml  minimal.yml  pages.yml  release-draft.yml  verify_source_generated_changes_are_persisted.yml  workflow.yml
.nuke/: build.schema.json  parameters.json
1490-status-update/: README.md
benchmarks/ContextPropagation/: B3.cs  ContextPropagation.csproj  Main.cs  PropagationExtensions.cs
benchmarks/NLog46/: Benchmarks.cs  Main.cs  NLog46.csproj
customer-samples/AutomaticTraceIdInjection/: README.md
customer-samples/ConsoleApp/: Alpine3.10.dockerfile  Alpine3.9.dockerfile  Debian.dockerfile
deploy/Azure.Site.Extension/: Azure.Site.Extension.nuspec  README.md  applicationHost.xdt  install.cmd
deploy/Datadog.Trace.ClrProfiler.WindowsInstaller/: Config.wxi  Datadog.Trace.ClrProfiler.WindowsInstaller.wixproj  Files.Managed.Net45.GAC.wxs  Files.Managed.Net45.wxs  Files.Managed.Net461.wxs  Files.Managed.NetStandard20.wxs  Product.wxs  build.ps1  core-env.cmd  fx-env.cmd  install.cmd  uninstall.cmd
deployments/cloudfoundry/: .gitignore
dev/: docker-compose.yaml  envvars.sh  otel-config.yaml
dev-aop/: basic.js  docker-compose.yml  dotnet-counters-in-sdk.dockerfile  eshop-app.dockerfile  instrumented-app.dockerfile  otel-config.yaml  run-test.sh
docker/: Datadog.Trace.ClrProfiler.IntegrationTests.sh  Datadog.Trace.ClrProfiler.Native.sh  build.sh  dotnet.alpine.core50.dockerfile  dotnet.dockerfile  native.dockerfile  package.dockerfile  package.sh  with-profiler-logs.bash  with-profiler.bash
docs/: .markdownlint.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPING.md  INTERNAL_CONFIGURATION.md  LOGS_INJECTION.md  PULL_FROM_UPSTREAM.md  README.md  RELEASING.md  USAGE.md  advanced-config.md  always-on-profiling.md  azure-instrumentation.md  azure.md  correlating-traces-with-logs.md  default-service-name.md  developing.md  iis-instrumentation.md  instrumented-libraries.md  internal-config.md  manual-instrumentation.md  metrics.md  runtime-metrics.md  span_metadata.md  troubleshooting.md  windows-service-instrumentation.md
docs/internal/: developing.md  docker-windows.md  (+10 more)
overhead-test/: .gitignore  README.md  SignalFx.OverheadTest.sln
profiler/: README.MD
samples-aspnet/: Directory.Build.props
src/: Directory.Build.props
test/: Directory.Build.props
tracer/: Datadog.Trace.proj  Directory.Build.props  GlobalSuppressions.cs  build.ps1  build.sh  build_in_docker.ps1  build_in_docker.sh  integrations.json
tracer/test/test-applications/integrations/dependency-libs/Samples.AlwaysOnProfiler.NativeDep/: CMakeLists.txt  Directory.Build.props  Samples.AlwaysOnProfiler.NativeDep.def  Samples.AlwaysOnProfiler.NativeDep.vcxproj  Samples.AlwaysOnProfiler.NativeDep.vcxproj.filters  callbacktest.cpp  callbacktest.h
(+3293 files in other folders)
